css/style.css
html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}

.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }

html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}

*, *:before, *:after {box-sizing: inherit}

.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}

/* generic styles */
p {
    margin: 0;
    padding: 0;
}

html,button {
    font-family: 'Red Hat Text', sans-serif;
    
}
/* navigation styles */

nav {

display: flex;
flex-direction: column;
align-items: center;
}

header {
    height: 100vh;
    display: flex;
    flex-direction: column;
}


.nav-container {
    margin: 10px 0;
    display: flex;
    align-items: center;
    text-align: center;
}

.logo, form {
    display: inline-block;
	color: black;
	text-align: center;
}



.logo {
    margin: 0 20px 0 0;
    font-family: 'Sriracha', cursive;
    font-size: 3.5rem;
}

.login {
    margin-left: auto;
    min-width: 110px;
}

.nav-button {
    cursor: pointer;
    background-color: #b2b2b2;
    border-radius: 50px;
    border: 3px solid#fff;
    color:#fff;
    overflow: hidden;
    padding: 13px;
    display: inline-block;
    text-transform: uppercase;
    letter-spacing: 1px;
    font-weight: 700;
    outline: none;
    transition: all 0.3s;
    height: 50px;
}

.search-button {
background-color: #ffb732;
width: 130px;
min-width: 100px;
}

.breakfast {
    background-color: #FFE57E;
}

.lunch {
    background-color: #b5e7a0;
}

.dinner {
    background-color: #858A9F;
}

.snacks {
    background-color: #e06377;
}

.search-bar {
    width: 60%;
    margin: 10px auto;
    /* background-color: #8a8f8b; */
}

.nav-button:hover,
.nav-button:focus {
    color: white;
    background-color: black
}

.login i {
    color: white;
}



/* header content */

.featured-background {
background-color: #FFE57E;
height: 60vh;
}

.featured-container {
    height: 100%;
    padding: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.featured-image {
    margin: 0 10px 0 auto;
}

.featured-image img {
    border-radius: 17px;
}

.featured-title {
    margin: 0;
    font-size: 2.3rem;
    font-family: 'Bebas Neue', cursive;
}

.featured-meal-container, .instructions-container {
    display: flex;
    flex-direction: column;
}
/* 
.featured-meal-container {
    
} */

.instructions-container {
    margin-left: 10px;
    height: 95%;
    width: 50%;
}

.featured-ingredients {
    font-size: 1.4rem;
}

.options-container {
    margin: 10px auto;
}

main {
    border-radius: 17px;
    background-color: #ffb732;
}

.meal-options {
    text-align: center;
    text-decoration: none;
    display: flex;
    justify-content: center;
    align-items: center;
}

.instructions-button {
    width: 235px;
    margin: 5px auto;
    background-color: #ffb732;
    border: none;
;
}

.instructions-text {
    display: flex;
    flex-direction: column;
    overflow: auto;
    height: 285px;
}

/* wrapper */

.wrapper {
    width: 90%;
    margin: 0 auto;
}


/* recipe card classes */

.recipes-container {
 
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin: 20px auto;
    border-radius: 17px;
    background-color: #FFE57E;
}

.recipe-card {
    border-radius: 17px;
    width: 250px;
    height: 250px;
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: hidden;
    margin: 25px 10px;
   
}

.card-image-container {
    width: 100%;
    height: 100%;
    position: relative;
    color: white;
    background-color: black;
}

.card-image {
    margin: auto auto;
    display: block;
    width: 100%;
    height: 100%;
    opacity: 0.8;
}

.card-overlay {
    display: block;
    position: absolute;
    width: 100%;
    height: 100%;
    
    top: 0;
}

.card-overlay-title {
    font-family: 'Bebas Neue', cursive;
    position: absolute;
    font-size: 2rem;
    font-weight: 600;
    top: 8px;
    left: 16px;
    font-weight: 500;
    color: white;
    padding: 1px;
}


.card-description {
    display: flex;
    flex-direction: column;
}

.card-iconbar {
    display: flex;
    justify-content: space-around;
}

.card-text {
 padding-bottom: 10px;
}

.mobile {
    display: none;
    margin-bottom: 20px;
}

.mobile-options {
    display: none;
}

.mobile-login {
 display: none;
}

@media (max-width: 1020px) {


    body {
        /* background-color: lightblue; */
    }

    .wrapper {
        width: 90%;
    }

    .recipe-card {
        width: 230px;
        height: 230px;
    }

    .logo {
        font-size: 3rem;
    }

    .featured-title {
        font-size: 2.1rem;
    }

    .featured-ingredients {
        font-size: 1.3rem;
    }
}

@media (max-width: 860px) {
    body {
        /* background-color: red; */
    }

    .nav-button {
        padding: 10px;
        height: 40px;
        letter-spacing: 0;
    }

    .desktop {
        display: none;
    } 

    .mobile {
        display: flex;
        align-items: center;
    }

    .search-button {
        width: 100px;
    }
    .search-bar {
        width: 100%;
        margin: 0;
    }

    .mobile-options {
        display: flex;
        align-items: center;
        justify-content: center;
        margin-bottom: 20px;
    }

    .featured-ingredients {
        font-size: 1.1rem;
    }

    .recipe-card {
        width: 210px;
        height: 210px;
    }

    .card-overlay-title {
        font-size: 1.8rem;
    }
}

@media (max-width: 600px) {
    body {
        /* background-color: green; */
    }

    header {
        height: 100%;
    }
    .logo {
        margin: 0 5px 0 0;
        font-size: 2.1rem;
    }

    .nav-button {
        padding: 10px;
    }

    .desktop-login {
        display: none;
    }

    .mobile-login {
        display: flex;
        min-width: 50px;
        justify-content: center;
    }

    .featured-background {
        height: 100%;
    }

    .featured-container {
        flex-direction: column;
    }

    .featured-image {
        display: flex;
        justify-content: center;
        margin: 0;
    }

    .featured-image img {
        width: 70%;
        margin: 0;
    }

    .instructions-container {
        margin: 5px auto;
        width: 100%;
    }

    .featured-title {
        font-size: 1.7rem;
    }

    .instructions-text {
        overflow: hidden;
        height: 100%;
    }

    .featured-ingredients {
        font-size: 1rem;
    }

    
    .recipe-card {
        width: 180px;
        height: 180px;
    }

    .card-overlay-title {
        top: 0;
        font-size: 1.6rem;
    }
}

@media (max-width: 480px) {
    body {
        /* background-color: blue; */
        min-width: 320px;
    }

    .wrapper {
        width: 100%;
    }

    .logo {
        font-size: 1.7rem;
    }
    .nav-button {
        padding: 10px;
    }

    .recipe-card {
        width: 135px;
        height: 135px;
    }

    .card-overlay-title {
        font-size: 1rem;
    }
}

